--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "seed-db": "mysql -u root -p < database/movies.sql"
   },
   "dependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "babel": "^6.23.0",
+    "express": "^4.16.4",
+    "jest": "^23.6.0",
+    "mysql": "^2.16.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
