--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@babel/core": "^7.1.2",
     "babel": "^6.23.0",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "faker": "^4.1.0"
   }
 }
