--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "seed-db": "mysql -u root -p < database/movies.sql"
+    "seed-db": "mysql -u root -p < database/schema.sql"
   },
   "dependencies": {
     "@babel/cli": "^7.1.2",
