--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "babel": "^6.23.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "webpack": "^4.23.0"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
