--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "eslint": "^5.7.0",
     "express": "^4.16.4",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
+    "nodemon": "^1.18.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "webpack": "^4.23.1"
