--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "dependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.4",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
-    "supertest": "^3.3.0",
     "nodemon": "^1.18.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "supertest": "^3.3.0",
     "webpack": "^4.23.1"
   },
   "devDependencies": {
