--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
@@ -26,6 +27,7 @@
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "supertest": "^3.3.0",
