Added Api calls instead of dummy data

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-loader": "^8.0.4",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "es6-promise": "^4.2.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
