--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "",
+  "jest": {
+    "verbose": true
+  },
   "version": "",
   "description": "",
   "author": "",
@@ -10,7 +13,8 @@
   "scripts": {
     "build": "webpack -w",
     "start": "nodemon server/index.js",
-    "seed-db": "mysql -u root -p --local-infile < database/schema.sql"
+    "seed-db": "mysql -u root -p --local-infile < database/schema.sql",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/cli": "^7.1.2",
@@ -28,17 +32,23 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "mysql": "^2.16.0",
+    "enzyme": "^3.7.0",
     "nodemon": "^1.18.4",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "supertest": "^3.3.0",
-    "webpack": "^4.23.1"
+    "webpack": "^4.23.1",
+    "enzyme-adapter-react-16": "^1.6.0"
   },
   "devDependencies": {
+    "babel-jest": "^23.6.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb-standard": "^2.1.6",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest-environment-enzyme": "^7.0.0",
+    "jest-enzyme": "^7.0.0",
+    "react-test-renderer": "^16.6.0",
     "webpack-cli": "^3.1.2"
   },
   "eslintIgnore": [
