--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "jest": {
     "verbose": true,
-    "setupTestFrameworkScriptFile": "<rootDir>client/Review.test.jsx"
+    "setupTestFrameworkScriptFile": "<rootDir>client/enzyme.js"
   },
   "dependencies": {
     "@babel/cli": "^7.1.2",
@@ -23,10 +23,13 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-jest": "^23.2.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -42,6 +45,7 @@
     "react": "^16.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.0",
+    "regenerator-runtime": "^0.12.1",
     "supertest": "^3.3.0",
     "webpack": "^4.23.1"
   },
@@ -57,8 +61,5 @@
   },
   "eslintIgnore": [
     "/dist/review.bundle.js"
-  ],
-  "babel": {
-    "presets": ["jest"]
-  }
+  ]
 }
