--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "es6-promise": "^4.2.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "mysql": "^2.16.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
