--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-jest": "^23.2.0",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "es6-promise": "^4.2.5",
@@ -46,6 +47,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.0",
     "regenerator-runtime": "^0.12.1",
+    "style-loader": "^0.23.1",
     "supertest": "^3.3.0",
     "webpack": "^4.23.1"
   },
