--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-.bundle.js
+*.bundle.js
 
 ## package-lock
 package-lock.json
