--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "jest-environment-enzyme": "^7.0.0",
     "jest-enzyme": "^7.0.0",
     "react-test-renderer": "^16.6.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4"
   },
   "eslintIgnore": [
     "/dist/review.bundle.js"
