--- a/SQL/package.json
+++ b/SQL/package.json
@@ -40,6 +40,7 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "mysql": "^2.16.0",
+    "newrelic": "^4.11.0",
     "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4",
     "pg": "^7.6.1",
